--- a/Pastecard/Base.lproj/LaunchScreen.storyboard
+++ b/Pastecard/Base.lproj/LaunchScreen.storyboard
@@ -17,41 +17,20 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8YZ-h7-nO9" userLabel="Blue Border">
-                                <rect key="frame" x="18.666666666666657" y="74" width="337.66666666666674" height="24"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
                                 <color key="backgroundColor" name="trademarkBlue"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="24" id="fW5-ut-UkQ"/>
-                                    <constraint firstAttribute="width" constant="300" id="pa2-HX-lyl"/>
+                                    <constraint firstAttribute="height" constant="56" id="Wxd-qV-7sm"/>
                                 </constraints>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="pa2-HX-lyl"/>
-                                    </mask>
-                                </variation>
-                                <variation key="widthClass=regular">
-                                    <mask key="constraints">
-                                        <include reference="pa2-HX-lyl"/>
-                                    </mask>
-                                </variation>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="fafaBackground"/>
                         <constraints>
-                            <constraint firstItem="8YZ-h7-nO9" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" multiplier="0.9" id="Fh0-bb-uMq"/>
-                            <constraint firstItem="8YZ-h7-nO9" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="ill-5V-OhQ"/>
-                            <constraint firstItem="8YZ-h7-nO9" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="l1p-c1-5AZ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="8YZ-h7-nO9" secondAttribute="trailing" id="2jH-kk-hve"/>
+                            <constraint firstItem="8YZ-h7-nO9" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="643-Lo-YfH"/>
+                            <constraint firstItem="8YZ-h7-nO9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="leD-dS-fQV"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="Fh0-bb-uMq"/>
-                            </mask>
-                        </variation>
-                        <variation key="widthClass=compact">
-                            <mask key="constraints">
-                                <include reference="Fh0-bb-uMq"/>
-                            </mask>
-                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
