--- a/Pastecard/Base.lproj/Main.storyboard
+++ b/Pastecard/Base.lproj/Main.storyboard
@@ -17,131 +17,42 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rWU-9h-teh" userLabel="Shadow">
-                                <rect key="frame" x="18.666666666666657" y="68" width="337.66666666666674" height="578.66666666666663"/>
-                                <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aFv-EB-KLj" userLabel="Blue Border">
-                                        <rect key="frame" x="0.0" y="0.0" width="337.66666666666669" height="24"/>
-                                        <color key="backgroundColor" name="trademarkBlue"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="24" id="Gr3-vL-03g"/>
-                                        </constraints>
-                                    </view>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="interactive" text="Loading…" textAlignment="natural" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mIS-i6-bEL" userLabel="Pastecard">
-                                        <rect key="frame" x="0.0" y="24" width="337.66666666666669" height="554.66666666666663"/>
-                                        <viewLayoutGuide key="safeArea" id="CH4-bI-Y69"/>
-                                        <color key="backgroundColor" name="fafaBackground"/>
-                                        <accessibility key="accessibilityConfiguration" hint="This is the full contents of your Pastecard." label="Pastecard text">
-                                            <accessibilityTraits key="traits" updatesFrequently="YES"/>
-                                        </accessibility>
-                                        <color key="textColor" systemColor="labelColor"/>
-                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textView>
-                                </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="interactive" text="Loading…" textAlignment="natural" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mIS-i6-bEL" userLabel="Pastecard">
+                                <rect key="frame" x="0.0" y="56" width="375" height="756"/>
+                                <viewLayoutGuide key="safeArea" id="CH4-bI-Y69"/>
+                                <color key="backgroundColor" name="fafaBackground"/>
+                                <accessibility key="accessibilityConfiguration" hint="This is the full contents of your Pastecard." label="Pastecard text">
+                                    <accessibilityTraits key="traits" updatesFrequently="YES"/>
+                                </accessibility>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textView>
+                            <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aFv-EB-KLj" userLabel="Blue Border">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
+                                <color key="backgroundColor" name="trademarkBlue"/>
+                                <accessibility key="accessibilityConfiguration">
+                                    <accessibilityTraits key="traits" notEnabled="YES"/>
+                                </accessibility>
                                 <constraints>
-                                    <constraint firstItem="aFv-EB-KLj" firstAttribute="top" secondItem="rWU-9h-teh" secondAttribute="top" id="70b-xR-QTf"/>
-                                    <constraint firstAttribute="trailing" secondItem="mIS-i6-bEL" secondAttribute="trailing" id="INu-ll-ZFO"/>
-                                    <constraint firstAttribute="trailing" secondItem="aFv-EB-KLj" secondAttribute="trailing" id="MwT-qY-sl9"/>
-                                    <constraint firstItem="mIS-i6-bEL" firstAttribute="top" secondItem="rWU-9h-teh" secondAttribute="top" constant="24" id="UON-7d-znP"/>
-                                    <constraint firstAttribute="bottom" secondItem="mIS-i6-bEL" secondAttribute="bottom" id="a9J-EZ-RhK"/>
-                                    <constraint firstAttribute="width" secondItem="rWU-9h-teh" secondAttribute="height" multiplier="7:12" id="eKi-DG-xZM"/>
-                                    <constraint firstItem="mIS-i6-bEL" firstAttribute="leading" secondItem="rWU-9h-teh" secondAttribute="leading" id="q88-SZ-RmO"/>
-                                    <constraint firstAttribute="width" secondItem="rWU-9h-teh" secondAttribute="height" multiplier="2:3" id="qBB-au-WKs"/>
-                                    <constraint firstAttribute="width" constant="300" id="rvM-Zc-f0B"/>
-                                    <constraint firstItem="aFv-EB-KLj" firstAttribute="leading" secondItem="rWU-9h-teh" secondAttribute="leading" id="yGb-xN-4Oc"/>
+                                    <constraint firstAttribute="height" constant="56" id="vSv-Dt-fVD"/>
                                 </constraints>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="eKi-DG-xZM"/>
-                                        <exclude reference="qBB-au-WKs"/>
-                                        <exclude reference="rvM-Zc-f0B"/>
-                                    </mask>
-                                </variation>
-                                <variation key="widthClass=compact">
-                                    <mask key="constraints">
-                                        <include reference="eKi-DG-xZM"/>
-                                    </mask>
-                                </variation>
-                                <variation key="widthClass=regular">
-                                    <mask key="constraints">
-                                        <include reference="qBB-au-WKs"/>
-                                        <include reference="rvM-Zc-f0B"/>
-                                    </mask>
-                                </variation>
                             </view>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="jUc-Wd-ufd">
-                                <rect key="frame" x="71.666666666666686" y="670.66666666666663" width="232" height="34"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A9Y-cv-Fhi">
-                                        <rect key="frame" x="0.0" y="0.0" width="108" height="34"/>
-                                        <color key="backgroundColor" name="fafaBackground"/>
-                                        <accessibility key="accessibilityConfiguration" hint="Discard changes" label="Cancel"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
-                                        <inset key="contentEdgeInsets" minX="24" minY="6" maxX="24" maxY="6"/>
-                                        <state key="normal" title="Cancel">
-                                            <color key="titleColor" name="buttonText"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="cancelAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HL3-Sy-tC1"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jNF-kl-Let">
-                                        <rect key="frame" x="124" y="0.0" width="108" height="34"/>
-                                        <color key="backgroundColor" name="fafaBackground"/>
-                                        <accessibility key="accessibilityConfiguration" hint="Save changes" label="Save"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
-                                        <inset key="contentEdgeInsets" minX="24" minY="6" maxX="24" maxY="6"/>
-                                        <state key="normal" title="Save">
-                                            <color key="titleColor" name="buttonText"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="saveAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xr1-tb-VBd"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="rWU-9h-teh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Aka-PU-oHw"/>
-                            <constraint firstItem="jUc-Wd-ufd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="TMv-Od-9k7"/>
-                            <constraint firstItem="rWU-9h-teh" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" multiplier="0.9" id="TiW-Jv-Tuu"/>
-                            <constraint firstItem="jUc-Wd-ufd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Xkc-4R-Ngr"/>
-                            <constraint firstItem="rWU-9h-teh" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="24" id="crK-Fq-WIv"/>
-                            <constraint firstItem="rWU-9h-teh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kHc-tx-eKX"/>
-                            <constraint firstItem="jUc-Wd-ufd" firstAttribute="top" secondItem="rWU-9h-teh" secondAttribute="bottom" constant="24" id="pKr-rd-Qe3"/>
+                            <constraint firstItem="aFv-EB-KLj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="AL1-8x-0Sp"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="aFv-EB-KLj" secondAttribute="trailing" id="BLj-R8-5nv"/>
+                            <constraint firstItem="mIS-i6-bEL" firstAttribute="top" secondItem="aFv-EB-KLj" secondAttribute="bottom" id="BQL-En-a7o"/>
+                            <constraint firstAttribute="bottom" secondItem="mIS-i6-bEL" secondAttribute="bottom" id="FqC-zh-7D7"/>
+                            <constraint firstItem="aFv-EB-KLj" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="H2p-6t-Eak"/>
+                            <constraint firstItem="mIS-i6-bEL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="c2c-eY-CAh"/>
+                            <constraint firstItem="mIS-i6-bEL" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="tAT-m3-YLC"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="Aka-PU-oHw"/>
-                                <exclude reference="TiW-Jv-Tuu"/>
-                                <exclude reference="kHc-tx-eKX"/>
-                                <exclude reference="TMv-Od-9k7"/>
-                                <exclude reference="Xkc-4R-Ngr"/>
-                            </mask>
-                        </variation>
-                        <variation key="widthClass=compact">
-                            <mask key="constraints">
-                                <include reference="TiW-Jv-Tuu"/>
-                                <include reference="kHc-tx-eKX"/>
-                                <include reference="Xkc-4R-Ngr"/>
-                            </mask>
-                        </variation>
-                        <variation key="widthClass=regular">
-                            <mask key="constraints">
-                                <include reference="Aka-PU-oHw"/>
-                                <include reference="TMv-Od-9k7"/>
-                            </mask>
-                        </variation>
                     </view>
                     <connections>
-                        <outlet property="cancelButton" destination="A9Y-cv-Fhi" id="tn4-tf-ALA"/>
                         <outlet property="pasteCard" destination="mIS-i6-bEL" id="VnK-kd-iEv"/>
-                        <outlet property="saveButton" destination="jNF-kl-Let" id="PRj-Be-QoF"/>
-                        <outlet property="shadowView" destination="rWU-9h-teh" id="1bV-TM-hNp"/>
                         <segue destination="lsL-uc-6MA" kind="presentation" identifier="showSignIn" id="oVP-16-vDt"/>
                     </connections>
                 </viewController>
@@ -302,9 +213,6 @@
         </scene>
     </scenes>
     <resources>
-        <namedColor name="buttonText">
-            <color red="0.0" green="0.25098039215686274" blue="0.50196078431372548" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="fafaBackground">
             <color red="0.98039215686274506" green="0.98039215686274506" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
